--- a/.gitignore/.gitignore
+++ b/.gitignore/.gitignore
@@ -1,20 +1,34 @@
-# Compiled source #
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-###################
+
+
+# compiled output
+
+/dist
+
+/dist-server
+
+/tmp
+
+/out-tsc
+
+
+
+# dependencies
+
+/node_modules
 
 
 
 # IDEs and editors
 
-.idea
+/.idea
 
 .project
 
 .classpath
 
 .c9/
-
-
 
 *.launch
 
@@ -38,100 +52,36 @@
 
 
 
-# Packages #
+# misc
 
-############
+/.sass-cache
 
-# it's better to unpack these files and commit the raw source
+/connect.lock
 
-# git has its own built in compression methods
+/coverage
 
-*.7z
+/libpeerconnection.log
 
-*.dmg
+npm-debug.log
 
-*.gz
+yarn-error.log
 
-*.iso
+testem.log
 
-*.jar
-
-*.rar
-
-*.tar
-
-*.zip
+/typings
 
 
 
-# Logs and databases #
+# e2e
 
-######################
+/e2e/*.js
 
-*.log
-
-*.sql
-
-*.sqlite
+/e2e/*.map
 
 
 
-# OS generated files #
-
-######################
+# System Files
 
 .DS_Store
 
-.DS_Store?
-
-._*
-
-.Spotlight-V100
-
-.Trashes
-
-ehthumbs.db
-
 Thumbs.db
-
-
-
-# Others #
-
-##########
-
-*.com
-
-*.class
-
-*.dll
-
-*.exe
-
-*.o
-
-*.so
-
-.#*
-
-*~
-
-*#
-
-#*
-
-*.tmp
-
-**/npm-cache
-
-/node_modules
-
-tmp
-
-.idea/
-
-.vscode/
-
-.idea/workspace.xml
-
-dist/docs/
